--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
   "scripts": {
     "test": "echo \"Error: no test specified\"",
     "start": "gulp",
-    "do": "NODE_ENV=production gulp",
+    "do": "cross-env NODE_ENV=production gulp",
     "add": "node ./core/add.js add",
     "ftp": "gulp ftp",
     "zip": "gulp zip",
-    "zip:dev": "ZIP_DEV=true gulp zip",
-    "init": "del ./app && git clone https://github.com/werty1001/app.git ./app"
+    "zip:dev": "cross-env ZIP_DEV=true gulp zip",
+    "init": "del app && git clone https://github.com/werty1001/app.git app"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.7",
@@ -29,6 +29,7 @@
     "babel-preset-env": "^1.2.2",
     "bempug": "^1.1.1",
     "browser-sync": "^2.18.8",
+    "cross-env": "^3.2.4",
     "css-mqpacker": "^5.0.1",
     "del": "^2.2.2",
     "del-cli": "^0.2.1",
@@ -46,6 +47,7 @@
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.4.1",
     "gulp-stylus": "^2.6.0",
+    "gulp-svg-sprite": "^1.3.6",
     "gulp-twig": "^0.7.0",
     "gulp-zip": "^4.0.0",
     "htmlparser2": "^3.9.2",
