--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "bemgo",
-  "description": "Starter kit for developing BEM applications using Gulp and Webpack.",
-  "version": "0.1.0",
+  "name": "BEMGO",
+  "description": "Quick start of developing projects using Gulp build system and BEM methodology.",
+  "version": "1.0.0",
   "author": "Oleg Krylov",
   "license": "MIT",
   "main": "gulpfile.js",
@@ -12,50 +12,58 @@
   "bugs": {
     "url": "https://github.com/werty1001/bemgo/issues"
   },
+  "homepage": "https://github.com/werty1001/bemgo",
   "scripts": {
     "test": "echo \"Error: no test specified\"",
-    "start": "gulp",
+    "task": "gulp",
+    "start": "cross-env WATCH=true gulp",
+    "clean": "cross-env CLEAN=true gulp compile:templates",
     "do": "cross-env NODE_ENV=production gulp",
-    "add": "node ./core/add.js add",
-    "ftp": "gulp ftp",
+    "add": "node ./core/.add",
     "zip": "gulp zip",
-    "zip:dev": "cross-env ZIP_DEV=true gulp zip",
+    "zip:dev": "cross-env SNAPSHOT=true gulp zip",
     "init": "del app && git clone https://github.com/werty1001/app.git app"
   },
   "devDependencies": {
-    "autoprefixer": "^6.7.7",
-    "babel-core": "^6.24.0",
-    "babel-loader": "^6.4.1",
-    "babel-preset-env": "^1.2.2",
+    "@babel/core": "^7.3.3",
+    "@babel/preset-env": "^7.3.1",
+    "autoprefixer": "^9.4.7",
     "bempug": "^1.1.1",
-    "browser-sync": "^2.18.8",
-    "cross-env": "^3.2.4",
-    "css-mqpacker": "^5.0.1",
-    "del": "^2.2.2",
-    "del-cli": "^0.2.1",
-    "gulp": "github:gulpjs/gulp#4.0",
-    "gulp-cssnano": "^2.1.2",
-    "gulp-favicons": "^2.2.7",
-    "gulp-file-include": "^1.0.0",
+    "bemto.pug": "^2.1.0",
+    "browser-sync": "^2.26.3",
+    "cross-env": "^5.2.0",
+    "del": "^3.0.0",
+    "gulp": "^4.0.0",
+    "gulp-babel": "^8.0.0",
+    "gulp-beml": "^1.0.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-cssnano": "^2.1.3",
+    "gulp-favicons": "^2.3.0",
+    "gulp-file-include": "^2.0.1",
     "gulp-if": "^2.0.2",
-    "gulp-less": "^3.3.0",
-    "gulp-notify": "^3.0.0",
-    "gulp-plumber": "^1.1.0",
-    "gulp-postcss": "^6.4.0",
-    "gulp-pug": "^3.3.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-sass": "^3.1.0",
-    "gulp-sourcemaps": "^2.4.1",
-    "gulp-stylus": "^2.6.0",
-    "gulp-svg-sprite": "^1.3.6",
-    "gulp-twig": "^0.7.0",
-    "gulp-zip": "^4.0.0",
-    "htmlparser2": "^3.9.2",
-    "postcss-import": "^9.1.0",
-    "postcss-sprites": "^4.2.0",
-    "postcss-url": "^5.1.2",
-    "stylefmt": "^5.3.2",
-    "vinyl-ftp": "^0.6.0",
-    "webpack": "^2.2.1"
+    "gulp-imagemin": "^5.0.3",
+    "gulp-less": "^4.0.1",
+    "gulp-notify": "^3.2.0",
+    "gulp-plumber": "^1.2.1",
+    "gulp-postcss": "^8.0.0",
+    "gulp-pug": "^4.0.1",
+    "gulp-rename": "^1.4.0",
+    "gulp-sass": "^4.0.2",
+    "gulp-stylus": "^2.7.0",
+    "gulp-svg-sprite": "^1.5.0",
+    "gulp-twig": "^1.2.0",
+    "gulp-uglify": "^3.0.1",
+    "gulp-zip": "^4.2.0",
+    "htmlparser2": "^3.10.1",
+    "js-beautify": "^1.8.9",
+    "plugin-error": "^1.0.1",
+    "postcss-sprites": "^4.2.1",
+    "postcss-url": "^8.0.0",
+    "stylefmt": "^6.0.3",
+    "through2": "^3.0.0"
+  },
+  "engines": {
+    "node": ">=10.0.0",
+    "npm": ">=5.0.0"
   }
 }
