--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,16 @@
+os:
+  - linux
+  - osx
+  - windows
+
 sudo: false
 
 language: node_js
 node_js:
   - 10
+
+script:
+  - npm run do
 
 branches:
   only:
